<?xml version="1.0"?>
<package format="2">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>The robot_control package</description>

  <maintainer email="makhdoomimohtashim@gmail.com"> Mohatashem Reyaz Makhdoomi</maintainer>
  <license>TODO</license>

   <author email="makhdoomimohtashim@gmail.com">Mohatashem Reyaz Makhdoomi</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
